Update logo source in index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <main class="container">
     <!-- Replace src with your logo path -->
     <img
-      src="logo.png"
+      src="logo2.png"
       alt="obsve logo"
       class="logo"
     />
