--- a/index.html
+++ b/index.html
@@ -3,16 +3,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>obsve — see more · do more</title>
+  <meta name="description" content="obsve is an open-source observability framework for Proxmox VE, built on OpenTelemetry, Prometheus, and Grafana." />
+
+  <!-- Open Graph / Social -->
+  <meta property="og:title" content="obsve — enterprise-grade observability for Proxmox VE" />
+  <meta property="og:description" content="An open-source, community-driven observability framework for Proxmox VE, built on OpenTelemetry." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="logo2.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Open-source friendly font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --fg: #000;
-      --bg: #fff;
-      --muted: #555;
+      --fg: #0f172a;
+      --bg: #ffffff;
+      --muted: #475569;
+      --footer: #64748b;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --fg: #e5e7eb;
+        --bg: #020617;
+        --muted: #9ca3af;
+        --footer: #6b7280;
+      }
     }
 
     * {
@@ -28,6 +49,7 @@
       background: var(--bg);
       color: var(--fg);
       font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      transition: background 0.2s ease, color 0.2s ease;
     }
 
     .container {
@@ -39,15 +61,8 @@
     .logo {
       max-width: 360px;
       width: 100%;
-      margin: 0 auto 1.25rem;
+      margin: 0 auto 1.5rem;
       display: block;
-    }
-
-    .tagline {
-      font-size: 1.1rem;
-      font-weight: 500;
-      letter-spacing: 0.02em;
-      margin-bottom: 2rem;
     }
 
     .description {
@@ -60,19 +75,18 @@
     footer {
       margin-top: 3rem;
       font-size: 0.85rem;
-      color: #777;
+      color: var(--footer);
     }
 
     @media (max-width: 480px) {
-      .tagline {
-        font-size: 1rem;
+      .description {
+        font-size: 0.95rem;
       }
     }
   </style>
 </head>
 <body>
   <main class="container">
-    <!-- Replace src with your logo path -->
     <img
       src="logo2.png"
       alt="obsve logo"
