Update logo source for dark mode preference

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <picture>
       <source
-        srcset="logo2b.png"
+        srcset="logo2w.png"
         media="(prefers-color-scheme: dark)"
       />
       <img
